add `clip_gif`