@@ -9,7 +9,7 @@ import java.util.UUID;
 
 @Service
 public class YoutubeClipperService {
-    public String clipVideo(String link, String start, String end, Boolean withSubs) throws IOException, InterruptedException {
+    public String clipVideo(String link, String start, String end, Boolean withSubs, Boolean isGif) throws IOException, InterruptedException {
         String workbenchDir = System.getProperty("user.home") + "/.workbench";
         File workbench = new File(workbenchDir);
         if (!workbench.exists()) {
@@ -17,10 +17,24 @@ public class YoutubeClipperService {
         }
         String resultFileName = UUID.randomUUID() + ".mp4";
 
-        String subsParam = withSubs ? " --subs" : "";
-        String[] cmd = {"/bin/bash", "-c", "yes N | ~/.bin/naevis-clip " + link + " " + start + " " + end + " " + resultFileName + subsParam};
+        StringBuilder cmdBuilder = new StringBuilder();
+        cmdBuilder.append("yes N | ~/.bin/naevis-clip ")
+                .append(" ").append(link)
+                .append(" ").append(start)
+                .append(" ").append(end)
+                .append(" ").append(resultFileName);
 
-        Process process = Runtime.getRuntime().exec(cmd);
+        if (withSubs) {
+            cmdBuilder.append(" --subs");
+        } else if (isGif) {
+            cmdBuilder.append(" --gif");
+        }
+
+        Process process = new ProcessBuilder()
+                .command("/bin/bash", "-c", cmdBuilder.toString())
+                // .redirectErrorStream(true)
+                .start();
+
         int exitCode = process.waitFor();
         if (exitCode != 0) {
             throw new RuntimeException("Failed to clip video");
@@ -32,7 +46,7 @@ public class YoutubeClipperService {
     public static void main(String[] args) {
         String link = "https://youtube.com/watch?v=QZHbypZSTGg";
         // QZHbypZSTGg 2:39.89 3:29.00
-        String resultedFileName = new YoutubeClipperService().clipVideo(link, "2:39.89", "3:29.00", false);
+        String resultedFileName = new YoutubeClipperService().clipVideo(link, "2:39.89", "3:29.00", false, false);
         System.out.println(resultedFileName);
     }
 }
